--- a/views/add-entry.hbs
+++ b/views/add-entry.hbs
@@ -1,7 +1,7 @@
 <nav>
   <ol>
-    <li><a href="/"> Home </a></li>
-    <li> / New Entry </li>
+    {{!-- <li><a href="/"> Home </a></li> --}}
+    <li> / Add Entry </li>
   </ol>
 </nav>
 
