--- a/views/delete-account.html
+++ b/views/delete-account.html
@@ -34,7 +34,7 @@
         <style>
             body {
                 background-image: url("/img/account.jpg");
-                background-repeat: no-repeat;
+                /* background-repeat: no-repeat; */
                 background-size: 100%;                
             }
 
@@ -43,7 +43,7 @@
             
             body {
                 background-image: url("/img/account.jpg");
-                background-repeat: no-repeat;
+                /* background-repeat: no-repeat; */
                 background-size: auto;                
             }
             }
