--- a/views/mindfulness.html
+++ b/views/mindfulness.html
@@ -37,7 +37,7 @@
         <style>
             body {
                 background-image: url("/img/mindfulness.jpg");
-                background-repeat: no-repeat;
+                /* background-repeat: no-repeat; */
                 background-size: 100%;                           
             }
 
@@ -46,7 +46,7 @@
             
             body {
                 background-image: url("/img/mindfulness.jpg");
-                background-repeat: no-repeat;
+                /* background-repeat: no-repeat; */
                 background-size: auto;                
             }
             }
