--- a/views/about.html
+++ b/views/about.html
@@ -26,7 +26,7 @@
         <style>
             body {
                 background-image: url("/img/login.jpg");
-                background-repeat: no-repeat;
+                /* background-repeat: no-repeat; */
                 background-size: 100%;                
             }
 
@@ -35,7 +35,7 @@
             
             body {
                 background-image: url("/img/login.jpg");
-                background-repeat: no-repeat;
+                /* background-repeat: no-repeat; */
                 background-size: auto;                
             }
             }
