--- a/views/breathing.html
+++ b/views/breathing.html
@@ -30,7 +30,7 @@
         <style>
             body {
                 background-image: url("/img/home.jpg");
-                background-repeat: no-repeat;
+                /* background-repeat: no-repeat; */
                 background-size: 100%;                           
             }
 
@@ -39,7 +39,7 @@
             
             body {
                 background-image: url("/img/home.jpg");
-                background-repeat: no-repeat;
+                /* background-repeat: no-repeat; */
                 background-size: auto;                
             }
             }
