--- a/views/edit-entry.hbs
+++ b/views/edit-entry.hbs
@@ -1,6 +1,6 @@
 <nav>
   <ol>
-    <li><a href="/"> Home </a></li>
+    {{!-- <li><a href="/"> Home </a></li> --}}
     <li aria-current="page"> / Edit Entry </li>
   </ol>
 </nav>
