--- a/views/home.html
+++ b/views/home.html
@@ -65,7 +65,7 @@
         <style>
             body {
                 background-image: url("/img/home.jpg");
-                background-repeat: no-repeat;
+                /* background-repeat: no-repeat; */
                 background-size: 100%;                
             }
 
@@ -74,7 +74,7 @@
             
             body {
                 background-image: url("/img/home.jpg");
-                background-repeat: no-repeat;
+                /* background-repeat: no-repeat; */
                 background-size: auto;                
             }
             }
