--- a/views/invalid-login.html
+++ b/views/invalid-login.html
@@ -41,7 +41,7 @@
         <style>
             body {
                 background-image: url("/img/login.jpg");
-                background-repeat: no-repeat;
+                /* background-repeat: no-repeat; */
                 background-size: 100%;                
             }
 
@@ -50,7 +50,7 @@
             
             body {
                 background-image: url("/img/login.jpg");
-                background-repeat: no-repeat;
+                /* background-repeat: no-repeat; */
                 background-size: auto;                
             }
             }
