--- a/views/invalid-signup.html
+++ b/views/invalid-signup.html
@@ -42,7 +42,7 @@
         <style>
             body {
                 background-image: url("/img/login.jpg");
-                background-repeat: no-repeat;
+                /* background-repeat: no-repeat; */
                 background-size: 100%;                
             }
 
@@ -51,7 +51,7 @@
             
             body {
                 background-image: url("/img/login.jpg");
-                background-repeat: no-repeat;
+                /* background-repeat: no-repeat; */
                 background-size: auto;                
             }
             }
