--- a/views/login.html
+++ b/views/login.html
@@ -39,7 +39,7 @@
         <style>
             body {
                 background-image: url("/img/login.jpg");
-                background-repeat: no-repeat;
+                /* background-repeat: no-repeat; */
                 background-size: 100%;                
             }
 
@@ -48,7 +48,7 @@
             
             body {
                 background-image: url("/img/login.jpg");
-                background-repeat: no-repeat;
+                /* background-repeat: no-repeat; */
                 background-size: auto;                
             }
             }
