--- a/views/meditation-let-go.html
+++ b/views/meditation-let-go.html
@@ -23,7 +23,7 @@
         <style>
             body {
                 background-image: url("/img/meditation.jpg");
-                background-repeat: no-repeat;
+                /* background-repeat: no-repeat; */
                 background-size: 100%;                
             }
 
@@ -32,7 +32,7 @@
             
             body {
                 background-image: url("/img/meditation.jpg");
-                background-repeat: no-repeat;
+                /* background-repeat: no-repeat; */
                 background-size: auto;                
             }
             }
