--- a/views/view-entry.hbs
+++ b/views/view-entry.hbs
@@ -1,6 +1,6 @@
 <nav>
   <ol>
-    <li><a href="/"> Home </a></li>
+    {{!-- <li><a href="/"> Home </a></li> --}}
     <li> / View Entry </li>
   </ol>
 </nav>
